feat(project): reworked CI server to solve javafx not being included in docker image initialized in testing