@@ -59,6 +59,14 @@ test {
         events "failed", "skipped", "passed", "standardOut", "standardError", "started"
     }
     systemProperty "file.encoding", "utf-8"
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.base',
+            '-Dtestfx.robot=glass',
+            '-Dglass.platform=Monocle',
+            '-Dmonocle.platform=Headless',
+            '-Dprims,order=sw'
+    ]
 }
 
 tasks.withType(JavaCompile).configureEach {
